# rtneuralCsound

./: .gitignore  .gitmodules  CmakeLists.txt  README.md  requirements.txt
moogGen/: README.md  main.cpp
moogGen/example/: wav_utils.hpp
moogGen/src/: RKSimulationModel.h
python/: compareSpectrum.py  eval_param_model.py  tensor_torch.py  tensor_torch_param.py
python/noiseGenScripts/: pinkNoise.py  sineChirp.py  velocityBursts.py  whiteNoise.py
ref/autofilter_v3/: rtneural_model_weights.json
ref/moog_1k/: best_model.pt  rtneural_model_weights.json
ref/moog_20-20k_32units/: best_model_param.pt  rtneural_model_param_weights.json
ref/moog_20-20k_AGAM+conv/: best_model_param.pt  rtneural_model_param_weights.json
ref/moog_60-20k_v1/: best_model_param.pt  rtneural_model_param_weights.json
ref/moog_60-20k_v2/: best_model_param.pt  rtneural_model_param_weights.json
src/process_wav/: CMakeLists.txt  process_wav.cpp
src/process_wav_torch/: CMakeLists.txt  process_wav_torch.cpp
src/process_wav_torch_param/: CMakeLists.txt  process_wav_torch_param2.cpp
testSound Project/: testSound.als
